[gd_scene load_steps=4 format=3 uid="uid://dx64dtbyugdvo"]

[ext_resource type="PackedScene" uid="uid://b68ccp4d6ivka" path="res://assets/models/enemy_cage_spider_animated_3/cage_spider_animated_v3.glb" id="1_ny706"]
[ext_resource type="Script" uid="uid://bd377uoacqbw3" path="res://scripts/enemy_cage_spider/cage_spider_animated_v_3_model.gd" id="2_wy0f7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wy0f7"]
radius = 0.0535941
height = 0.526056

[node name="cage_spider_animated_v3" instance=ExtResource("1_ny706")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
script = ExtResource("2_wy0f7")

[node name="Armature" parent="." index="0"]
transform = Transform3D(-0.00524819, 0.643383, -0.0562568, 0.00423475, -0.0562232, -0.643393, -0.645825, -0.00559701, -0.00376165, -0.145323, 0.683439, -0.0279171)

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(-0.00676791, -0.00553002, -0.00347529)
bones/0/rotation = Quaternion(5.14317e-05, 2.92024e-06, 5.68291e-06, 1)
bones/1/rotation = Quaternion(-0.0217856, -0.162758, 0.931442, 0.324731)
bones/2/rotation = Quaternion(0.706777, 0.149031, -0.18545, 0.666231)
bones/3/rotation = Quaternion(-0.597778, 0.000143251, -0.0243269, 0.801292)
bones/19/rotation = Quaternion(0.0315043, -0.21156, 0.844217, 0.491475)
bones/20/rotation = Quaternion(0.750597, 0.354801, -0.178583, 0.528043)
bones/21/rotation = Quaternion(-0.596636, -0.281959, -0.110901, 0.743119)
bones/37/rotation = Quaternion(-0.021136, -0.371838, 0.647576, 0.664783)
bones/38/rotation = Quaternion(0.799625, 0.510945, -0.0332915, 0.31373)
bones/39/rotation = Quaternion(-0.563212, -0.450245, -0.2477, 0.647083)
bones/55/rotation = Quaternion(-0.0377599, -0.486183, 0.451103, 0.747466)
bones/56/rotation = Quaternion(0.788873, 0.603605, 0.0499127, 0.104158)
bones/57/rotation = Quaternion(0.503627, 0.62932, 0.357973, -0.471351)
bones/58/position = Vector3(-0.071789, 0.272169, 0.0223365)
bones/58/rotation = Quaternion(0.27045, 0.532576, 0.189572, 0.779283)
bones/59/rotation = Quaternion(0.107555, 0.174168, 0.114728, 0.972078)
bones/61/position = Vector3(-0.0137733, 0.285411, 0.0181843)
bones/61/rotation = Quaternion(0.176022, 0.329672, 0.0273648, 0.927138)
bones/62/rotation = Quaternion(0.160473, 0.376978, 0.193407, 0.891476)
bones/64/position = Vector3(0.0367188, 0.295752, -0.0219373)
bones/64/rotation = Quaternion(0.168165, 0.311183, 0.00211277, 0.935351)
bones/65/rotation = Quaternion(0.140972, 0.401643, 0.219225, 0.877924)
bones/67/position = Vector3(0.0976238, 0.288047, -0.00779069)
bones/67/rotation = Quaternion(0.236282, 0.440567, 0.0384559, 0.865213)
bones/68/rotation = Quaternion(-0.0595993, 0.458297, 0.412493, 0.785023)
bones/70/rotation = Quaternion(0.339174, 0.464411, -0.172431, 0.799719)
bones/73/rotation = Quaternion(-0.372279, -0.449901, 0.725961, -0.363289)
bones/74/rotation = Quaternion(0.738893, -0.536155, -0.261375, -0.313462)
bones/75/rotation = Quaternion(0.617258, -0.408678, 0.0393805, 0.671137)
bones/91/rotation = Quaternion(0.565196, 0.783867, -0.199247, -0.1625)
bones/92/rotation = Quaternion(-0.781881, -0.161668, -0.228006, 0.55726)
bones/93/rotation = Quaternion(0.125185, 0.786397, 0.604391, -0.0249005)
bones/109/rotation = Quaternion(-0.457765, -0.666134, -0.0117569, 0.588709)
bones/110/rotation = Quaternion(0.620105, 0.517132, 0.490082, -0.328427)
bones/111/rotation = Quaternion(0.0860486, 0.754467, 0.612891, -0.218495)
bones/112/position = Vector3(0.0741759, 0.27219, 0.013966)
bones/112/rotation = Quaternion(0.226664, 0.790817, 0.240217, 0.515294)
bones/113/rotation = Quaternion(-0.13694, 0.243726, 0.0773208, 0.957009)
bones/115/position = Vector3(0.0158406, 0.284181, 0.0173815)
bones/115/rotation = Quaternion(0.150801, 0.506713, 0.0948245, 0.84351)
bones/116/rotation = Quaternion(-0.0336077, 0.534409, 0.249056, 0.807)
bones/118/position = Vector3(-0.0386602, 0.2981, -0.0158149)
bones/118/rotation = Quaternion(0.135053, 0.469863, 0.100223, 0.866571)
bones/119/rotation = Quaternion(0.0103255, 0.57067, 0.260433, 0.778719)
bones/121/position = Vector3(-0.0976628, 0.286906, 0.00322033)
bones/121/rotation = Quaternion(0.158525, 0.628771, 0.179383, 0.739824)
bones/122/rotation = Quaternion(-0.118679, 0.689839, 0.399523, 0.591962)
bones/127/rotation = Quaternion(-0.175207, -0.287402, 0.912281, -0.233335)
bones/128/rotation = Quaternion(0.768176, -0.558377, -0.251266, 0.187043)
bones/129/rotation = Quaternion(-0.584588, 0.761875, 0.199681, 0.19476)
bones/142/rotation = Quaternion(-0.364368, 0.909083, -0.109584, -0.169691)
bones/145/position = Vector3(-0.00606721, 0.431293, -0.231982)
bones/145/rotation = Quaternion(-0.714159, -0.000106721, -0.0103666, 0.699907)
bones/147/position = Vector3(-2.49793, -1.2613, 1.27974)
bones/147/scale = Vector3(1, 1, 1)
bones/149/position = Vector3(-3.00932, 0.540468, 1.13937)
bones/149/scale = Vector3(1, 1, 1)
bones/151/position = Vector3(-2.50352, 2.06225, 0.920714)
bones/151/scale = Vector3(1, 1, 1)
bones/153/position = Vector3(-1.35224, 3.20542, 0.892943)
bones/153/scale = Vector3(1, 1, 1)
bones/155/position = Vector3(2.43768, -1.0723, 1.23734)
bones/155/rotation = Quaternion(-0.265513, -0.178815, 0.865178, -0.385999)
bones/155/scale = Vector3(1, 1, 1)
bones/157/position = Vector3(3.03635, 0.734648, 1.05574)
bones/157/scale = Vector3(1, 1, 1)
bones/159/position = Vector3(2.26022, 2.49489, 0.862998)
bones/159/scale = Vector3(1, 1, 1)
bones/161/position = Vector3(1.43656, 3.26639, 0.805155)

[node name="Arm_left" type="PhysicalBone3D" parent="Armature/Skeleton3D" index="4"]
transform = Transform3D(4.71631, -0.868804, -1.90744, 2.05934, 2.79517, 3.81876, 0.3902, -4.25077, 2.90095, -0.0803777, 2.34104, 1.63662)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.287212, 0.154846, -0.085756)
body_offset = Transform3D(3.17345, -2.99225, -2.75906, 4.06273, 2.53967, 1.91861, 0.245328, -3.35161, 3.91706, -0.684719, -1.39559, 0.784433)
bone_name = "Bone.084"

[node name="hitbox" type="Area3D" parent="Armature/Skeleton3D/Arm_left" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/Arm_left/hitbox" index="0"]
transform = Transform3D(0.223662, 0.967984, 0.113938, -0.810323, 0.249634, -0.53015, -0.54162, 0.0262472, 0.840214, 0.243741, 0.160006, -0.0494857)
shape = SubResource("CapsuleShape3D_wy0f7")

[connection signal="body_entered" from="Armature/Skeleton3D/Arm_left/hitbox" to="." method="_on_hitbox_body_entered"]
